src/test/deca/context/invalid/provided/testi25.deca
//Resultats :
//Erreur contextuelle
//Ligne 6 : new is used on classes
class A{}
{
    A a = new int();
}